Customized 'login_required' decorator to add boolean attribute     --before, I was just manually making the attributes Changed 'Delete' button to link to 'delete_product' view     --this simplifies view logic for the cart greatly

--- a/commerce/templates/commerce/cart.html
+++ b/commerce/templates/commerce/cart.html
@@ -32,12 +32,14 @@
 	${{ item.product.price }}
       </td>
       <td>
-	<input type="number" name="update.{{ item.product.id }}" min="1"
+	<input type="number" name="{{ item.product.pk }}" min="1"
 	       value="{{ item.quantity }}">
       </td>
       <td>
-	<input class="button" type="submit" name="{{ item.product.id }}"
-	       value="Delete">
+	<a class="rounded button"
+	   href="{% url 'commerce:delete_product' item.product.pk %}?next={{ request.path }}">
+	  Delete
+	</a>
       </td>
     </tr>
     {% endfor %}
