Extended UserCreationForm to require email and first_name fields on submission Changed account.css to add 100% width to email input elements Changed CreditCardForm to use TextInput widget for card_number Made MonthYearWidget for credit card date input

--- a/account/static/account/css/account.css
+++ b/account/static/account/css/account.css
@@ -1,6 +1,6 @@
 /* input fields */
 
-input[type="text"], input[type="password"] {width: 100%;}
+input:not([type="submit"]):not([type="radio"]) {width: 100%;}
 
 input:not([type="submit"]):not([type="radio"]):focus {box-shadow: 0 0 0 1px grey;}
 
