Changed ActiveProductManager to filter out products that are not in stock Changed product template to leave out add button if product inactive Added tests for Index, ProductDetails, add_product, and delete_product Changed ProductDetails to show page for discontinued products Changed add_product to fail gracefully if product is inactive

--- a/commerce/templates/commerce/product.html
+++ b/commerce/templates/commerce/product.html
@@ -23,10 +23,12 @@
       <i>No Rating</i>
       {% endif %}
     </p>
+    {% if not product.discontinued and product.in_stock %}
     <a class="rounded button"
        href="{% url 'commerce:add_product' product.pk %}?next={{ product.get_absolute_url }}">
       Add
     </a>
+    {% endif %}
   </div>
   <p class="rounded text">{{ product.description|default:"<i>No Description</i>" }}</p>
 </div>
