Added cart check at the beginning of 'cart' view Added error list check in cart.html Added check for kwargs in CreditCardForm     --raise TypeError if required kwargs are not passed Added simple test for 'cart view

--- a/commerce/templates/commerce/cart.html
+++ b/commerce/templates/commerce/cart.html
@@ -16,6 +16,13 @@
   Your Cart
   {% endif %}
 </h2>
+{% if errors %}
+<ul class="error list">
+  {% for error in errors %}
+  <li>{{ error }}</li>
+  {% endfor %}
+</ul>
+{% endif %}
 {% if items %}
 <form class="cart" method="post">
   {% csrf_token %}
