Changed cart.html to use product stock as maximum of field Added many tests to cart Added a test to add_product that checks if product has enough stock Added field checks to cart tests that submit POST data and don't redirect     --these checks compare the response fields with what's expected Changed check_cart to get_products which returns a dict of products along with errors Changed cart and checkout to use this new function Changed cart to reduce quantity values of submission if they go over stock

--- a/commerce/templates/commerce/cart.html
+++ b/commerce/templates/commerce/cart.html
@@ -9,13 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<h2>
-  {% if user.is_authenticated %}
-  {{ user.first_name }}'s Cart
-  {% else %}
-  Your Cart
-  {% endif %}
-</h2>
+<h2>{% if user.is_authenticated %}{{ user.first_name }}'s Cart{% else %}Your Cart{% endif %}</h2>
 {% if errors %}
 <ul class="error list">
   {% for error in errors %}
@@ -39,7 +33,10 @@
 	${{ item.product.price }}
       </td>
       <td>
-	<input type="number" name="{{ item.product.pk }}" min="1"
+	<input type="number"
+	       name="{{ item.product.pk }}"
+	       min="1"
+	       max="{{ product.stock }}"
 	       value="{{ item.quantity }}">
       </td>
       <td>
