--- a/commerce/templates/commerce/cart.html
+++ b/commerce/templates/commerce/cart.html
@@ -36,7 +36,7 @@
 	<input type="number"
 	       name="{{ item.product.pk }}"
 	       min="1"
-	       max="{{ product.stock }}"
+	       max="{{ item.product.stock }}"
 	       value="{{ item.quantity }}">
       </td>
       <td>
