Changed thank_you.html to use purchase_price on order item Set up database for test_views.py under account

--- a/commerce/templates/commerce/thank_you.html
+++ b/commerce/templates/commerce/thank_you.html
@@ -32,7 +32,7 @@
 	  {{ item.product.name }}
 	</a>
       </td>
-      <td>${{ item.product.price }}</td>
+      <td>${{ item.purchase_price }}</td>
       <td>{{ item.quantity }}</td>
     </tr>
     {% endfor %}
